fixed the stupid scrollbar thing

--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -30,7 +30,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: auto;
   z-index: -10;
 }
 
